
version 8.2.2

    List.deleteByID, EqualableList.deleteByID, SortableList.deleteByIDを追加

version 8.2.2

    Add List.deleteByID, EqualableList.deleteByID, SortableList.deleteByID

version 8.2.1

    tyclover2のバグを修正。(vicl向け)

version 8.2.1

    Fixed a bug in tyclover2.  (for vicl) 

version 8.2.0

    REPLのバグを修正

version 8.2.0

    Fixed a bug in REPL

version 8.1.8

    tyclover2のバグを修正

version 8.1.8

    Fixed the bug of tyclover2

version 8.1.7

    initializeメソッドもdynamic指定できるようになりました。

version 8.1.7

    The initialize method can also be dynamically specified. 

version 8.1.6

    クラスメソッドもdynamic指定できるようになりました。

version 8.1.6

    Class methods can also be dynamically specified. 

version 8.1.5

    メソッドにdynamic指定ができるようになりました。動的にメソッドを実行できます。分割コンパイル時のmixin-layersで便利に使えると思います。

version 8.1.5

    Method can now be dynamically specified.  You can execute methods dynamically.  I think that it can be conveniently used in mixin-layers at split compilation.

version 8.1.4

    System.mvprintw(String,SortableList<ISortable>)の追加。

version 8.1.4

    Added System.mvprintw (String, SortableList).

version 8.1.3

    Hash.add, List.push(List), EqualableList.push(EqualableList), SortableList.push(SortableList)を追加。Listのadd(T)はあまり使用しないでください。addは要素の追加と言う意味でなく加算の意味で使用したいと思います。List.add(List)など。Listの要素の追加はpushを使ってください。
   
version 8.1.3

    Added Hash.add, List.push (List), EqualableList.push (EqualableList), SortableList.push (SortableList).  Please do not use add (T) of List much.  I do not think that add is an element addition meaning but want to use it in the meaning of addition.  List.add (List) and so on.  To add the elements of List please use push.

version 8.1.2

    JITでif文の条件式に論理演算子がありなんども実行すると落ちるバグを修正。

version 8.1.2

    Fixed a bug in JIT where there is a logical operator in the conditional expression of the if statement and it goes down if it runs a lot.

version 8.1.1

    JITでクラスファイルのコンパイルを-O2から-O3に変更しました。

version 8.1.1
