@@ -1,3 +1,3 @@
-clover2-dbgsym_8.2.0-1_amd64.deb debug extra
-clover2_8.2.0-1_amd64.buildinfo unknown optional
-clover2_8.2.0-1_amd64.deb unknown optional
+clover2-dbgsym_8.2.2-1_amd64.deb debug extra
+clover2_8.2.2-1_amd64.buildinfo unknown optional
+clover2_8.2.2-1_amd64.deb unknown optional
