@@ -1,7 +1,7 @@
 
 clover2 (8.2.2-1) unstable; urgency=medium
 
-    * Add List.deleteByID, EqualableList.deleteByID, SortableList.deleteByID
+    * Add List.deleteByID, EqualableList.deleteByID, SortableList.deleteByID. Fixed a bug in tyclover2.  (for vicl) 
 
 clover2 (8.2.1-1) unstable; urgency=medium
 
