@@ -2,10 +2,12 @@
 version 8.2.2
 
     List.deleteByID, EqualableList.deleteByID, SortableList.deleteByIDを追加
+    tyclover2のバグを修正。(vicl向け)
 
 version 8.2.2
 
     Add List.deleteByID, EqualableList.deleteByID, SortableList.deleteByID
+    Fixed a bug in tyclover2.  (for vicl) 
 
 version 8.2.1
 
